Added education details correctly

--- a/index.html
+++ b/index.html
@@ -314,23 +314,66 @@
 
         <div class="qualification__container container">
           <div class="qualification__tabs">
-            <div class="qualification__button button--flex">
+            <div
+              class="qualification__button button--flex qualification__active"
+              data-target="#education"
+            >
               <i class="uil uil-graduation-cap qualification__icon"></i>
               Education
             </div>
 
-            <div class="qualification__button button--flex">
+            <div
+              class="qualification__button button--flex"
+              data-target="#internship"
+            >
               <i class="uil uil-briefcase qualification__icon"></i>
-              Work
+              Internship
             </div>
           </div>
           <div class="qualification__sections">
-            <div class="qualification__content">
+            <div
+              class="qualification__content qualification__active"
+              data-content
+              id="education"
+            >
               <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">Electrical Engineer</h3>
+                  <h3 class="qualification__title">Class Xth</h3>
+                  <span class="qualification__subtitle">HCEA - Malda</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2015 - 2016
+                  </div>
+                </div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+
+              <div class="qualification__data">
+                <div></div>
+
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+
+                <div>
+                  <h3 class="qualification__title">Class XIIth</h3>
+                  <span class="qualification__subtitle">HCEA - Malda</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2017 - 2018
+                  </div>
+                </div>
+              </div>
+
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">Btech in EE</h3>
                   <span class="qualification__subtitle"
-                    >Aliah - University</span
+                    >Aliah University - Kolkata</span
                   >
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
@@ -339,133 +382,25 @@
                 </div>
                 <div>
                   <span class="qualification__rounder"></span>
-                  <span class="qualification__line"></span>
-                </div>
-              </div>
-
-              <div class="qualification__data">
-                <div></div>
-
-                <div>
-                  <span class="qualification__rounder"></span>
-                  <span class="qualification__line"></span>
-                </div>
-
-                <div>
-                  <h3 class="qualification__title">Web Design</h3>
-                  <span class="qualification__subtitle">Spain - Institute</span>
-                  <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2022 - 2023
-                  </div>
-                </div>
-              </div>
-
-              <div class="qualification__data">
-                <div>
-                  <h3 class="qualification__title">Web Development</h3>
-                  <span class="qualification__subtitle"
-                    >Kolkata - Institute</span
-                  >
-                  <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2016 - 2018
-                  </div>
-                </div>
-                <div>
-                  <span class="qualification__rounder"></span>
-                  <span class="qualification__line"></span>
-                </div>
-              </div>
-
-              <div class="qualification__data">
-                <div></div>
-                <div>
-                  <span class="qualification__rounder"></span>
                   <!-- <span class="qualification__line"></span> -->
-                </div>
-
-                <div>
-                  <h3 class="qualification__title">Lorem, ipsum dolor.</h3>
-                  <span class="qualification__subtitle"
-                    >Lorem, ipsum dolor.</span
-                  >
-                  <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2022 - 2024
-                  </div>
                 </div>
               </div>
             </div>
-            <div class="qualification__content">
+            <div class="qualification__content" data-content id="internship">
               <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">Lorem, ipsum dolor.</h3>
+                  <h3 class="qualification__title">Teaching Assistant(TA)</h3>
                   <span class="qualification__subtitle"
-                    >Lorem, ipsum dolor.</span
+                    >CodingNinjas - Online</span
                   >
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2018 - 2022
+                    2021 - 2022
                   </div>
                 </div>
-                <div>
-                  <span class="qualification__rounder"></span>
-                  <span class="qualification__line"></span>
-                </div>
-              </div>
-
-              <div class="qualification__data">
-                <div></div>
-
-                <div>
-                  <span class="qualification__rounder"></span>
-                  <span class="qualification__line"></span>
-                </div>
-
-                <div>
-                  <h3 class="qualification__title">Web Design</h3>
-                  <span class="qualification__subtitle">Spain - Institute</span>
-                  <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2022 - 2023
-                  </div>
-                </div>
-              </div>
-
-              <div class="qualification__data">
-                <div>
-                  <h3 class="qualification__title">Web Development</h3>
-                  <span class="qualification__subtitle"
-                    >Kolkata - Institute</span
-                  >
-                  <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2016 - 2018
-                  </div>
-                </div>
-                <div>
-                  <span class="qualification__rounder"></span>
-                  <span class="qualification__line"></span>
-                </div>
-              </div>
-
-              <div class="qualification__data">
-                <div></div>
                 <div>
                   <span class="qualification__rounder"></span>
                   <!-- <span class="qualification__line"></span> -->
-                </div>
-
-                <div>
-                  <h3 class="qualification__title">Lorem, ipsum dolor.</h3>
-                  <span class="qualification__subtitle"
-                    >Lorem, ipsum dolor.</span
-                  >
-                  <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2022 - 2024
-                  </div>
                 </div>
               </div>
             </div>
