--- a/index.html
+++ b/index.html
@@ -979,6 +979,7 @@
     </a>
 
     <!--==================== SWIPER JS ====================-->
+    <script src="/assets/js/scrollreveal.js "></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
 
     <!--==================== MAIN JS ====================-->
