--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
           <div class="about__data">
             <p class="about__description">
               Web dev and Problem Solving Enthusiast looking for a SDE role in
-              some good PBC. Currently learning MERN stack and honing my skills
-              over Leetcode and Codeforces.
+              some good PBC. Currently making projects in MERN stack and honing
+              my skills over Leetcode and Codeforces.
             </p>
             <div class="about__info">
               <div>
-                <span class="about__info-title">700+</span>
+                <span class="about__info-title">800+</span>
                 <span class="about__info-name"
                   >Problems <br />
                   solved
@@ -181,8 +181,7 @@
             </div>
             <div class="about__buttons">
               <a
-                download=""
-                href="assets/pdf/Sahil_Anower.pdf"
+                href="https://drive.google.com/file/d/1NuWugc1yU0KgQA06iwLJpKFRvziXpaEt/view"
                 class="button button--flex"
               >
                 Download Resume
@@ -398,6 +397,49 @@
                     2021 - 2022
                   </div>
                 </div>
+                <!-- <div>
+                  <span class="qualification__rounder"></span>
+                   <span class="qualification__line"></span> -->
+                <!-- </div> -->
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+
+              <div class="qualification__data">
+                <div></div>
+
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+
+                <div>
+                  <h3 class="qualification__title">
+                    Junior Analyst Intern - Python
+                  </h3>
+                  <span class="qualification__subtitle"
+                    >EnableCap Financial Services - Kolkata</span
+                  >
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    August 2022
+                  </div>
+                </div>
+              </div>
+
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">MTS Intern - DSA</h3>
+                  <span class="qualification__subtitle"
+                    >GeeksForGeeks - Noida</span
+                  >
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    Feb '23 - April '23
+                  </div>
+                </div>
                 <div>
                   <span class="qualification__rounder"></span>
                   <!-- <span class="qualification__line"></span> -->
@@ -571,6 +613,28 @@
           <div class="swiper-wrapper">
             <div class="portfolio__content grid swiper-slide">
               <img
+                src="assets/img/portfolio5.png"
+                alt=""
+                class="portfolio__img"
+              />
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Relish'N Haven</h3>
+                <p class="portfolio__description">
+                  An ecommerce application for basic human needs, made using
+                  React for frontend and Mongo Express as backend.
+                </p>
+                <a
+                  href="https://relish-n-haven.onrender.com/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="portfolio__content grid swiper-slide">
+              <img
                 src="assets/img/portfolio1.jpg"
                 alt=""
                 class="portfolio__img"
@@ -651,28 +715,6 @@
                 </p>
                 <a
                   href="https://prismatic-youtiao-15b89b.netlify.app/"
-                  class="button button--flex button--small portfolio__button"
-                >
-                  Demo
-                  <i class="uil uil-arrow-right button__icon"></i>
-                </a>
-              </div>
-            </div>
-
-            <div class="portfolio__content grid swiper-slide">
-              <img
-                src="assets/img/portfolio5.png"
-                alt=""
-                class="portfolio__img"
-              />
-              <div class="portfolio__data">
-                <h3 class="portfolio__title">Relish'N Haven</h3>
-                <p class="portfolio__description">
-                  An ecommerce application for basic human needs, made using
-                  React for frontend and Mongo Express as backend.
-                </p>
-                <a
-                  href="https://relish-n-haven.onrender.com/"
                   class="button button--flex button--small portfolio__button"
                 >
                   Demo
