--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <span class="section__subtitle"> My Introduction</span>
 
         <div class="about__container container grid">
-          <img src="assets/img/about.png" alt="" class="about__img" />
+          <img src="assets/img/about.jpg" alt="" class="about__img" />
           <div class="about__data">
             <p class="about__description">
               Backend Enthusiast looking for a SDE role in
